@@ -4,6 +4,9 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* match the other PM's for econf; update ${WORKDIR} instances of
+  config.{sub,guess} from /usr/share/gnuconfig.
+
 * added protection against bad environment dumps from other PMs for T
   during env restoration.
 
